# umi-project

umi/: .clang-format  .clang-tidy  CMakeLists.txt  README.md  SPEC.md
umi/cmake/: FindLLVM.cmake
umi/examples/: fib.umi  hello.umi  main.umi  swag.umi
umi/examples/std/: io.umi  std.umi  string.umi
umi/examples/std/math/: max.umi  min.umi
umi/grammar/: arrays.umi  comments.umi  compound_types.umi  enums.umi  expressions.umi  functions.umi  generics.umi  import-export.umi  operators.umi  raii.umi  reflection.umi  static_exceptions.umi  text.umi  types.umi  umi.g4
umi/include/algorithm/: algo.h  contains.h  insert_if.h  parallel_for.h  partition_range.h  sequence.h  ssize.h
umi/include/umi/: assert.h  id.h  parallelism.h
umi/include/umi/parse/: lexer.h  parser.h  token.h
umi/include/umi/types/: map.h  set.h  string.h  vector.h
umi/include/unicode/: types.h  utf8.h
umi/include/unicode/utf8/: algorithm.h  code_point.h  iterator.h  string.h  string_view.h
umi/lib/parse/: lexer.cpp  parse_rd.cpp  parser.cpp
umi/lib/support/: id.cpp  parallel.cpp
umi/lib/unicode/utf8/: algorithm.cpp  code_point.cpp  code_point.h  iterator.cpp  sso.cpp  sso.h  string.cpp  string_view.cpp
umi/test/: lex.test.cpp  llvm_trial.test.cpp  parse.test.cpp  partition_range.test.cpp
umi/tools/: parser_tblgen  parser_tblgen.cpp  token_dump  token_dump.cpp
umi/tutorial/: codegen.hpp  driver.cpp  threadful.cpp
